--- a/obysClone/style.css
+++ b/obysClone/style.css
@@ -141,6 +141,12 @@ html, body{
     /* background-color: red;  */
     width: 72%;
     margin-left: 27%;
+    height: fit-content;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 999;
 }
  
 .hero:nth-child(2){
@@ -148,8 +154,19 @@ html, body{
 }
 
 .hero h1{
-    font-size: 7vw;
+    font-size: 7.2vw;
     text-transform: uppercase;
-    line-height: 7vw;
+    line-height: 7.2vw;
     font-weight: 600;
+}
+.hero h2, .hero h3{
+    font-size: 7.2vw;
+    text-transform: uppercase;
+    line-height: 7.2vw;
+    font-weight: 600;
+}
+.hero h2:hover{
+    -webkit-text-stroke: 2px  #fff;
+    color: transparent; 
+    font-weight: 500;
 }
