--- a/obysClone/style.css
+++ b/obysClone/style.css
@@ -159,14 +159,68 @@ html, body{
     line-height: 7.2vw;
     font-weight: 600;
 }
-.hero h2, .hero h3{
+.hero h3{
     font-size: 7.2vw;
     text-transform: uppercase;
     line-height: 7.2vw;
     font-weight: 600;
 }
+.hero h2{
+    font-size: 7.2vw;
+    text-transform: uppercase;
+    line-height: 7.2vw;
+    font-weight: 600;
+    border-bottom: 0.5vw solid #fff;
+    /* padding-bottom: 0.8vw; */
+    /* transition: all ease 0.3s; */
+}
 .hero h2:hover{
     -webkit-text-stroke: 2px  #fff;
     color: transparent; 
     font-weight: 500;
+}
+#page2{
+    height: 100vh;
+    width: 100%;
+    padding-top: 17vh;
+    position: relative;
+    background-color: #151515;
+}
+
+#video-container{
+    height: 66vh;
+    width: 71vw;
+    position: relative;
+    left: 27%;
+    background-image: url(https://obys.agency/wp-content/uploads/2022/11/Showreel-2022-preview-1.jpg);
+}
+#video-container img{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    top: 0;
+
+}
+#video-container video{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+#video-cursor{
+    background-color: #FFA63D;
+    height: 8vw;
+    width: 8vw;
+    border-radius: 50%;
+    position: absolute;
+    top: -10%;
+    left: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+#video-cursor i{
+    font-size: 2vw;
 }
